--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,28 @@
+/* Body */
+body{
+    font-family: "Roboto";
+    color: #434455;
+    background-color: #FFFFFF;
+}
 /* Header */
 .logo{
-    font-family: Raleway;
+    font-family: "Raleway", sans-serif;
         font-size: 18px;
         font-weight: 700;
-        line-height: 21px;
+        line-height: 1.17;
         letter-spacing: 0.03em;
+        text-transform: uppercase;
         text-align: left;
+        color: #4d5ae5;
+}
+.half-logo{
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    text-align: left;
+    color: #2e2f42;
 }
 .menu-item{
         font-family: Roboto;
@@ -49,13 +66,6 @@ h3{
         text-align: left;
 }
 .button{
-    width: Hug (169px);
-    height: Hug (56px);
-    top: 428px ;
-    left: 636px ;
-    padding: 16px, 32px, 16px, 32px ;
-    border-radius: 4px ;
-    gap: 10px;
     background: #4D5AE5;
 }
 p{
@@ -66,21 +76,7 @@ p{
         letter-spacing: 0.02em;
         text-align: left;
 }
-.team-img{
-width: 264px; 
-height: 260px;
-}
-.port-img{
-width: 360px; 
-height: 300px;
-}
 /* footer */
-.footer-logo{
-    width: Hug (115px);
-    height: Fixed (24px);
-    top: 3088px;
-    left: 156px;
-}
 .footer-text{
     font-family: Roboto;
         font-size: 16px;
