--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,18 @@ body{
     background-color: #FFFFFF;
 }
 /* Header */
+.header{
+    border-bottom: 1px solid #e7e9fc;
+}
+.container{
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.header-container{
+    align-items: center;
+    display: flex;
+}
 .logo{
     font-family: "Raleway", sans-serif;
         font-size: 18px;
@@ -203,6 +215,7 @@ font-family: Roboto;
     color: #4d5ae5;
     background-color: #2e2f42;
 }
+
 .footer-logo{
     font-family: "Raleway",sans-serif;
     font-size: 18px;
@@ -223,4 +236,8 @@ font-family: Roboto;
         letter-spacing: 0.02em;
         text-align: left;
         color: #F4F4FD;
+}
+.footer-container{
+    flex-direction: column;
+    margin: 0 auto;
 }
