--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+ul {
+    margin: 0;
+    padding-left: 0;
+}
 /* Body */
 body{
     font-family: "Roboto",sans-serif;
@@ -6,6 +10,9 @@ body{
 }
 /* Header */
 .header{
+    color: rgba(255, 255, 255, 1);
+    padding-top: 24px;
+    padding-bottom: 24px;
     border-bottom: 1px solid #e7e9fc;
 }
 .container{
@@ -26,6 +33,7 @@ body{
         text-transform: uppercase;
         text-align: left;
         color: #4d5ae5;
+        margin-right: 76px;
 }
 .half-logo{
     font-family: Raleway;
@@ -36,6 +44,18 @@ body{
     text-align: left;
     color: #2e2f42;
 }
+.menu list{
+    display: flex;
+    gap: 40px;
+}
+.menu-item{
+    padding: 24px 0;
+}
+.nav{
+    display: flex;
+    align-items: center;
+    align-content: calc((100%-80px)/3);
+}
 .nav-link{
         font-family: Roboto;
         font-size: 16px;
@@ -44,6 +64,8 @@ body{
         letter-spacing: 0.02em;
         text-align: left;
         color: #2e2f42;
+        display: flex;
+        align-items: center;
 }
 .nav-link:hover{
     color: #404bbf;
