--- a/css/styles.css
+++ b/css/styles.css
@@ -189,6 +189,10 @@ font-family: Roboto;
     color: #ffffff;
     background: #4D5AE5;
     cursor: pointer;
+    left: 636px;
+    radius: 4px;
+    padding: 16px,32px,16px,32px;
+    gap: 10px;
 }
 .button:hover{
     background-color: #404BBF;
